--- a/template.html
+++ b/template.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Andy Chang's Personal Website</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    </head>
-    <body>
-        <div id="root">
 
-        </div>
-    </body>
+<head>
+    <title>Andy Chang's Personal Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Luckiest+Guy&family=PT+Sans&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div id="root">
+
+    </div>
+</body>
+
 </html>
